# zog

./: .gitignore  .kimi-prompt-features.txt  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: tests.yml
src/zog/: __init__.py  __main__.py  cli.py  config.py  errors.py  output.py
src/zog/commands/: __init__.py  auth.py  calendar.py  contacts.py  mail.py  workdrive.py
src/zog/providers/: __init__.py
src/zog/providers/zoho/: __init__.py  app.py  auth.py  calendar.py  client.py  contacts.py  device_flow.py  endpoints.py  mail.py  oauth_flow.py  workdrive.py
tests/: conftest.py  smoke_live.py  test_calendar_mock.py  test_cli_help.py  test_config.py  test_contacts_mock.py  test_device_flow_mock.py  test_oauth_flow_mock.py  test_output_formats.py  test_workdrive_mock.py  test_zoho_client_mock.py
